--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.7'
 
+    // https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
+    compile group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
+//
+//    // https://mvnrepository.com/artifact/org.mapstruct/mapstruct
+//    compile group: 'org.mapstruct', name: 'mapstruct', version: '1.3.1.Final'
+
+    // https://mvnrepository.com/artifact/org.mapstruct/mapstruct-jdk8
+    compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.1.Final'
+
 }
