--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.mapstruct/mapstruct-jdk8
     compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.1.Final'
 
+//    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+//    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
+    compile group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.3.9'
+
 }
